<resources>
    <string name="app_name">FTaoBao</string>
    <string name="action_settings">Settings</string>
    <string name="fragment1">fragment1</string>
    <string name="fragment2">fragment2</string>
    <string name="fragment3">fragment3</string>
    <string name="fragment4">fragment4</string>
    <string name="fragment5">fragment5</string>
    <!-- home -->
    <string name="nav_home_search_hint">搜一搜你会发现</string>
    <string name="nav_home_classify_tianmao">天猫</string>
    <string name="nav_home_classify_juhuasuan">聚划算</string>
    <string name="nav_home_classify_tianmaoguoji">天猫国际</string>
    <string name="nav_home_classify_waimai">外卖</string>
    <string name="nav_home_classify_tianmaochaoshi">天猫超市</string>
    <string name="nav_home_classify_chongzhizhongxin">充值中心</string>
    <string name="nav_home_classify_feizhulvxing">飞猪旅行</string>
    <string name="nav_home_classify_lingjingbi">领金币</string>
    <string name="nav_home_classify_paimai">拍卖</string>
    <string name="nav_home_classify_fenlei">分类</string>
    <string name="nav_home_fourstyles_haiqianggou">海抢购</string>
    <string name="nav_home_fourstyles_youhaohuo">有好货</string>
    <string name="nav_home_fourstyles_nanshenfan">男神范</string>
    <string name="nav_home_fourstyles_bimaiqingdai">必买清单</string>
    <string name="nav_home_fourstyles_getmore">进入查看更多</string>
    <string name="nav_home_fourstyles_kaiqihaohuodashang">开启好货大赏</string>
    <string name="nav_home_fourstyles_meizidouainiyo">妹子都爱你哟</string>
    <string name="nav_home_fourstyles_gouwuquangonglv">购物全攻略</string>
    <!-- home -->

    <!--weitao-->
    <string name="weitao">微淘</string>
    <string name="weitao_dynamic">关注动态</string>
    <string name="weitao_new">宝贝上新</string>
    <string name="weitao_direct_seeding">视频直播</string>
    <string name="weitao_hot_topic">精选热榜</string>
    <!--weitao-->

    <!--weitao_refresh-->
    <string name="down_pull_refresh">下拉刷新</string>
    <string name="data_load_completed">数据加载完毕</string>
    <string name="release_refresh">松开刷新</string>
    <string name="refreshing">正在刷新...</string>
    <!--weitao_refresh-->
</resources>
