<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="#fff"
    android:layout_height="160dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            >
            <FrameLayout
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/abc_ic_classify_round_background_1"
                    />
                <ImageView
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:layout_gravity="center"
                    android:src="@drawable/abc_ic_classify_round_tianmao"
                    />
            </FrameLayout>
            <TextView
                style="@style/NavHomeClassifyTextStyle"
                android:text="@string/nav_home_classify_tianmao"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            >
            <FrameLayout
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:src="@drawable/abc_ic_classify_round_background_2"
                    />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_gravity="center"
                    android:src="@drawable/abc_ic_classify_round_ju"
                    />
            </FrameLayout>
            <TextView
                style="@style/NavHomeClassifyTextStyle"
                android:text="@string/nav_home_classify_juhuasuan"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            >
            <FrameLayout
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:src="@drawable/abc_ic_classify_round_background_3"
                    />
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="-5dp"
                    android:src="@drawable/abc_ic_classify_round_jinkou"
                    />
                <ImageView
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="-5dp"
                    android:src="@drawable/abc_ic_classify_round_cat"
                    />
                <!--<ImageView
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:src="@drawable/abc_ic_classify_round_cat"
                    />-->
            </FrameLayout>
            <TextView
                style="@style/NavHomeClassifyTextStyle"
                android:text="@string/nav_home_classify_tianmaoguoji"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            >
            <FrameLayout
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:src="@drawable/abc_ic_classify_round_background_4"
                    />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_gravity="center"
                    android:src="@drawable/abc_ic_classify_round_waimai"
                    />
            </FrameLayout>
            <TextView
                style="@style/NavHomeClassifyTextStyle"
                android:text="@string/nav_home_classify_waimai"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            >
            <FrameLayout
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:src="@drawable/abc_ic_classify_round_background_5"
                    />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:src="@drawable/abc_ic_classify_round_chaoshi"
                    />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:src="@drawable/abc_ic_classify_round_cat"
                    />
            </FrameLayout>
            <TextView
                style="@style/NavHomeClassifyTextStyle"
                android:text="@string/nav_home_classify_tianmaochaoshi"
                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            >
            <FrameLayout
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/abc_ic_classify_round_background_6"
                    />
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:src="@drawable/abc_ic_classify_round_chong"
                    />
            </FrameLayout>
            <TextView
                android:text="@string/nav_home_classify_chongzhizhongxin"
                style="@style/NavHomeClassifyTextStyle"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            >
            <FrameLayout
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:src="@drawable/abc_ic_classify_round_background_7"
                    />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_gravity="center"
                    android:src="@drawable/abc_ic_classify_round_lvxing"
                    />
            </FrameLayout>
            <TextView
                style="@style/NavHomeClassifyTextStyle"
                android:text="@string/nav_home_classify_feizhulvxing"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            >
            <FrameLayout
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:src="@drawable/abc_ic_classify_round_background_8"
                    />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_gravity="center"
                    android:src="@drawable/abc_ic_classify_round_lingjingbi"
                    />
            </FrameLayout>
            <TextView
                style="@style/NavHomeClassifyTextStyle"
                android:text="@string/nav_home_classify_lingjingbi"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            >
            <FrameLayout
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:src="@drawable/abc_ic_classify_round_background_9"
                    />
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:src="@drawable/abc_ic_classify_round_pai"
                    />
            </FrameLayout>
            <TextView
                style="@style/NavHomeClassifyTextStyle"
                android:text="@string/nav_home_classify_paimai"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            >
            <FrameLayout
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:src="@drawable/abc_ic_classify_round_background_10"
                    />
                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:src="@drawable/abc_ic_classify_round_fenlei"
                    />
            </FrameLayout>
            <TextView
                style="@style/NavHomeClassifyTextStyle"
                android:text="@string/nav_home_classify_fenlei"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>