<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/abc_ic_fourstyles_time"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:text="@string/nav_home_fourstyles_haiqianggou"
                        android:textColor="#F53D3D"
                        android:textSize="22sp"
                        android:gravity="center_vertical"
                        android:layout_marginLeft="2dp"
                        />
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/nav_home_fourstyles_getmore"
                    android:textColor="#B0B0AA"
                    android:layout_marginLeft="10dp"
                    android:textSize="17sp"
                    />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/goods1"
                    />
            </LinearLayout>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/goods2"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/abc_ic_fourstyles_zan"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:text="@string/nav_home_fourstyles_youhaohuo"
                        android:textColor="#50B7F1"
                        android:textSize="22sp"
                        android:gravity="center_vertical"
                        android:layout_marginLeft="2dp"
                        />
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/nav_home_fourstyles_kaiqihaohuodashang"
                    android:textColor="#B0B0AA"
                    android:layout_marginLeft="10dp"
                    android:textSize="17sp"
                    />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/goods3"
                    />
            </LinearLayout>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/goods4"
                android:id="@+id/imageView" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/abc_ic_fourstyles_man"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:text="@string/nav_home_fourstyles_nanshenfan"
                        android:textColor="#96BEF8"
                        android:textSize="22sp"
                        android:gravity="center_vertical"
                        android:layout_marginLeft="2dp"
                        />
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/nav_home_fourstyles_meizidouainiyo"
                    android:textColor="#B0B0AA"
                    android:layout_marginLeft="10dp"
                    android:textSize="17sp"
                    />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/goods5"
                    />
            </LinearLayout>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/goods6"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/abc_ic_fourstyles_list"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:text="@string/nav_home_fourstyles_bimaiqingdai"
                        android:textColor="#F05270"
                        android:textSize="22sp"
                        android:gravity="center_vertical"
                        android:layout_marginLeft="2dp"
                        />
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/nav_home_fourstyles_gouwuquangonglv"
                    android:textColor="#B0B0AA"
                    android:layout_marginLeft="10dp"
                    android:textSize="17sp"
                    />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/goods7"
                    />
            </LinearLayout>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/goods8"
                />
        </LinearLayout>
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="9dp"
        android:background="#F4F4F4"
        />
</LinearLayout>